FORUM PAGE: Button spacing fixed

--- a/docroot/sites/all/themes/ambitious/sass/forms.scss
+++ b/docroot/sites/all/themes/ambitious/sass/forms.scss
@@ -2,6 +2,7 @@
 
 .webform-submit, input[type=submit]{
 	display:inline-block;
+	margin-right:10px;
   border:none;
   padding:5px 19px;
   font-size:18px;
